# Project configuration
[project]
name = "find-unicode-control"
version = "0.1"
description = "Script to find Unicode control characters"
requires-python = ">=2.7"
keywords = [
  "unicode",
  "script",
]
authors = [
  {name="Siddhesh Poyarekar"},
]
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/siddhesh/find-unicode-control"
